[gd_scene load_steps=2 format=2]

[ext_resource path="res://src/QuestionnaireConfiguration/Alarms/AlarmsContainer.gd" type="Script" id=1]

[node name="AlarmsContainer" type="PanelContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBox" type="VBoxContainer" parent="."]
margin_left = 7.0
margin_top = 7.0
margin_right = 1017.0
margin_bottom = 593.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="TopRow" type="HBoxContainer" parent="VBox"]
margin_right = 1010.0
margin_bottom = 20.0

[node name="AddButton" type="Button" parent="VBox/TopRow"]
margin_left = 931.0
margin_right = 1010.0
margin_bottom = 20.0
size_flags_horizontal = 10
text = "Add Alarm"

[node name="ScrollContainer" type="ScrollContainer" parent="VBox"]
margin_top = 24.0
margin_right = 1010.0
margin_bottom = 586.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="AlarmsList" type="VBoxContainer" parent="VBox/ScrollContainer"]
margin_right = 1010.0
size_flags_horizontal = 3

[connection signal="pressed" from="VBox/TopRow/AddButton" to="." method="_on_AddButton_pressed"]
